Added MyWebstore-Project to projects.html

--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <link rel="shortcut icon" href="img/favicon.ico">
@@ -47,7 +47,7 @@
         <div class="project-container">
           <img src="img/ftp_manager.jpg" class="project-image" id="project-icon">
           <div class="middle">
-            <a href="https://github.com/sirkarpfen/EasyFTP" target="_blank" style="text-decoration: none">
+            <a href="https://github.com/stephanscholz/EasyFTP" target="_blank" style="text-decoration: none">
               <div class="hover-text">
                 <h4>EasyFTP</h4>
               </div>
@@ -60,7 +60,7 @@
         <div class="project-container">
           <img src="img/break-a-block.png" class="project-image" id="project-icon">
           <div class="middle">
-            <a href="https://github.com/sirkarpfen/Break-A-Block" target="_blank" style="text-decoration: none">
+            <a href="https://github.com/stephanscholz/Break-A-Block" target="_blank" style="text-decoration: none">
               <div class="hover-text">
                 <h4>Break-A-Block</h4>
               </div>
@@ -73,7 +73,7 @@
         <div class="project-container">
           <img src="img/Workout.png" class="project-image" id="project-icon">
           <div class="middle">
-            <a href="https://github.com/sirkarpfen/WorkoutTimer" target="_blank" style="text-decoration: none">
+            <a href="https://github.com/stephanscholz/WorkoutTimer" target="_blank" style="text-decoration: none">
               <div class="hover-text">
                 <h4>WorkoutTimer</h4>
               </div>
@@ -84,9 +84,22 @@
       <!-- Column4 -->
       <div class="col-sm-4">
         <div class="project-container">
+          <img src="img/asp_core_logo.png" class="project-image" id="project-icon">
+          <div class="middle">
+            <a href="https://github.com/stephanscholz/MyWebstore" target="_blank" style="text-decoration: none">
+              <div class="hover-text">
+                <h4>MyWebstore</h4>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <!-- Column5 -->
+      <div class="col-sm-4">
+        <div class="project-container">
           <img src="img/minecraft.png" class="project-image" id="project-icon">
           <div class="middle">
-            <a href="https://github.com/sirkarpfen/Guilds" target="_blank" style="text-decoration: none">
+            <a href="https://github.com/stephanscholz/Guilds" target="_blank" style="text-decoration: none">
               <div class="hover-text">
                 <h4>Guilds - GuildCraft</h4>
               </div>
@@ -99,7 +112,7 @@
         <div class="project-container">
           <img src="img/minecraft.png" class="project-image" id="project-icon">
           <div class="middle">
-            <a href="https://github.com/sirkarpfen/Guildconomy" target="_blank" style="text-decoration: none">
+            <a href="https://github.com/stephanscholz/Guildconomy" target="_blank" style="text-decoration: none">
               <div class="hover-text">
                 <h4>Guildconomy - GuildCraft</h4>
               </div>
