Added new Skills

--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <link rel="shortcut icon" href="img/favicon.ico">
@@ -66,29 +66,43 @@
   <div class="container text-center">
     <div class="row">
       <div class="col-sm-4">
-        <img src="img/logo_csharp.png" id="icon">
+        <img src="img/logo_csharp.png" id="icon" />
         <h4>C-Sharp</h4>
       </div>
       <div class="col-sm-4">
-        <img src="img/logo_java.png" id="icon">
+        <img src="img/logo_java.png" id="icon" />
         <h4>Java</h4>
       </div>
       <div class="col-sm-4">
-        <img src="img/logo_html.png" id="icon">
+        <img src="img/logo_html.png" id="icon" />
         <h4>HTML5</h4>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-4">
-        <img src="img/logo_css.png" id="icon">
+        <img src="img/asp_core_logo.png" id="icon" />
+        <h4>ASP.NET Core</h4>
+      </div>
+      <div class="col-sm-4">
+        <img src="img/ef_core_logo.png" id="icon" />
+        <h4>EntityFramework Core</h4>
+      </div>
+      <div class="col-sm-4">
+        <img src="img/mssql.png" id="icon" />
+        <h4>MS-SQL Server</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="img/logo_css.png" id="icon" />
         <h4>CSS3</h4>
       </div>
       <div class="col-sm-4">
-        <img src="img/logo_mysql.png" id="icon">
+        <img src="img/logo_mysql.png" id="icon" />
         <h4>MySQL</h4>
       </div>
       <div class="col-sm-4">
-        <img src="img/logo_php.png" id="icon">
+        <img src="img/logo_php.png" id="icon" />
         <h4>PHP7</h4>
       </div>
     </div>
