--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
   
   <div class="container text-center">
     <div class="quote">
-      <h2>“The secret of getting ahead is getting started. The secret of getting started is breaking your complex overwhelming tasks into small, manageable tasks, and then starting on the first one. —Mark Twain”</h2>
+      <h2>“The secret of getting ahead is getting started. The secret of getting started is breaking your complex overwhelming tasks into small, manageable tasks, and then starting on the first one. — Mark Twain”</h2>
     </div>
   </div>
   <div class="container">
@@ -50,15 +50,18 @@
       <div class="col-md-6">
         <h4>A short description about myself</h4>
         <p>I am a passionate software-developer, striving to become an expert in the field. I am also a father of 2 and try to make life with the family as adventurous as possible. So after 2 years of business college, I started on a 13 year trip across Europe and parts of Asia. I have lived in different countries, met many great and inspiring people and am now coming back home to Austria for another adventure. In my time abroad, I have learned the different skills that now make up who I am. Together with my wife and kids I live life to the fullest - every day.</p>
-        <br/>
+        <br />
         <h4>Experience in software-development</h4>
         <p>My experiences range from hobby-projects to semi-commercial ones. I have worked a few years as an IT support assistant at the Austrian Embassy in Copenhagen. Although I have never worked for a tech company or as a software-developer per se, I have experience in project development and working in small teams. To see a collection of my proudest projects, please visit <a href="projects.html">the projects page</a></p>
-        <br/>
+        <br />
         <h4>Long-term goals</h4>
         <p>I plan to become an expert software-engineer. I want to be able to work Full-Stack or in DevOps. I want to perfect my skills as much as possible. Being in a team, surrounded by knowledge, experience and energy is what I always dreamt of.</p>
-        <br/>
+        <br />
         <h4>Interests</h4>
-        <p>My interests lie in everything that is cutting-edge and game tech: <br/> AI and neural networks, AR (augmented reality), VR (virtual reality), procedural generation algorithms and game-development - especially strategy and RPGs.</p>
+        <p>My interests lie in everything that is cutting-edge and game tech: <br /> AI and neural networks, AR (augmented reality), VR (virtual reality), procedural generation algorithms and game-development - especially strategy and RPGs.</p>
+        <br />
+        <h4>Hobbies</h4>
+        <p>Apart from coding I like hiking, camping, bodybuilding, cycling and gaming</p>
       </div>
     </div>
   </div>
@@ -74,11 +77,15 @@
         <h4>Java</h4>
       </div>
       <div class="col-sm-4">
-        <img src="img/logo_html.png" id="icon" />
-        <h4>HTML5</h4>
+        <img src="img/logo_mysql.png" id="icon" />
+        <h4>MySQL</h4>
       </div>
     </div>
     <div class="row">
+      <div class="col-sm-4">
+        <img src="img/mssql.png" id="icon" />
+        <h4>MS-SQL Server</h4>
+      </div>
       <div class="col-sm-4">
         <img src="img/asp_core_logo.png" id="icon" />
         <h4>ASP.NET Core</h4>
@@ -87,19 +94,15 @@
         <img src="img/ef_core_logo.png" id="icon" />
         <h4>EntityFramework Core</h4>
       </div>
-      <div class="col-sm-4">
-        <img src="img/mssql.png" id="icon" />
-        <h4>MS-SQL Server</h4>
-      </div>
     </div>
     <div class="row">
       <div class="col-sm-4">
-        <img src="img/logo_css.png" id="icon" />
-        <h4>CSS3</h4>
+        <img src="img/logo_html.png" id="icon" />
+        <h4>HTML5</h4>
       </div>
       <div class="col-sm-4">
-        <img src="img/logo_mysql.png" id="icon" />
-        <h4>MySQL</h4>
+        <img src="img/logo_css.png" id="icon" />
+        <h4>CSS3</h4>
       </div>
       <div class="col-sm-4">
         <img src="img/logo_php.png" id="icon" />
