Changed color scheme, some typo fixes

--- a/about.html
+++ b/about.html
@@ -48,19 +48,19 @@
         <img src="img/steph.jpg" class="img-responsive">
       </div>
       <div class="col-md-6">
-        <h4>A short description about myself</h4>
+        <h4><b>A short description about myself</b></h4>
         <p>I am a passionate software-developer, striving to become an expert in the field. I am also a father of 2 and try to make life with the family as adventurous as possible. So after 2 years of business college, I started on a 13 year trip across Europe and parts of Asia. I have lived in different countries, met many great and inspiring people and am now coming back home to Austria for another adventure. In my time abroad, I have learned the different skills that now make up who I am. Together with my wife and kids I live life to the fullest - every day.</p>
         <br />
-        <h4>Experience in software-development</h4>
+        <h4><b>Experience in software-development</b></h4>
         <p>My experiences range from hobby-projects to semi-commercial ones. I have worked a few years as an IT support assistant at the Austrian Embassy in Copenhagen. Although I have never worked for a tech company or as a software-developer per se, I have experience in project development and working in small teams. To see a collection of my proudest projects, please visit <a href="projects.html">the projects page</a></p>
         <br />
-        <h4>Long-term goals</h4>
+        <h4><b>Long-term goals</b></h4>
         <p>I plan to become an expert software-engineer. I want to be able to work Full-Stack or in DevOps. I want to perfect my skills as much as possible. Being in a team, surrounded by knowledge, experience and energy is what I always dreamt of.</p>
         <br />
-        <h4>Interests</h4>
-        <p>My interests lie in everything that is cutting-edge and game tech: <br /> AI and neural networks, AR (augmented reality), VR (virtual reality), procedural generation algorithms and game-development - especially strategy and RPGs.</p>
+        <h4><b>Interests</b></h4>
+        <p>My interests lie in everything that is cutting-edge and game tech: <br /> AI and neural networks, AR (augmented reality), VR (virtual reality), procedural generation and game-development - especially strategy and RPGs.</p>
         <br />
-        <h4>Hobbies</h4>
+        <h4><b>Hobbies</b></h4>
         <p>Apart from coding I like hiking, camping, bodybuilding, cycling and gaming</p>
       </div>
     </div>
