Changed color-scheme. fixed-top navbar

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <!--NavBar-->
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -37,7 +37,7 @@
   </nav>
   <!--end of NavBar-->
 
-  <div class="container text-center">
+  <div class="container text-center" id="top-container">
     <h2>Get in touch with me:</h2>
     <br/>
     <h4>Contact me on social media:</h4>
