--- a/impressum.html
+++ b/impressum.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<!--NavBar-->
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -39,7 +39,7 @@
   </nav>
   <!--end of NavBar-->
 
-  <div class="container text-center">
+  <div class="container text-center" id="top-container">
     <h1>Legal Disclosure</h1>
     Information in accordance with § 5 ECG, § 14 UGB, § 24 Mediengesetz und Mediengesetz-Novelle (§ 25 Abs 2 MedienG)
     <br><br>Stephan Scholz<br>Dr. Tandler Siedlung 3/4<br>2183 Neusiedl an der Zaya<br>
