--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <!--NavBar-->
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -36,7 +36,7 @@
     </div>
   </nav>
   <!--end of NavBar-->
-  <div class="container text-center">
+  <div class="container text-center" id="top-container">
     <h2>A small collection of my favorite projects</h2>
   </div>
   <div class="container">
