--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <!--NavBar-->
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -37,7 +37,7 @@
   </nav>
   <!--end of NavBar-->
   
-  <div class="container text-center">
+  <div class="container text-center" id="top-container">
     <div class="quote">
       <h2>“The secret of getting ahead is getting started. The secret of getting started is breaking your complex overwhelming tasks into small, manageable tasks, and then starting on the first one. — Mark Twain”</h2>
     </div>
